<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_HmiEventJson" Id="{d059d8e6-1265-429e-829d-93f6fd693400}">
    <Declaration><![CDATA[TYPE ST_HmiEventJson :
STRUCT
	eplan				: STRING;
	popUp				: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>